Bugfixes on mobile sidebar navigation

--- a/css/style.scss
+++ b/css/style.scss
@@ -326,7 +326,7 @@ header {
 }
 
 .openNav {
-	position: fixed;
+	position: absolute;
 	display: none;
 	z-index: 10;
 	right: 15px;
